<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/monday"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        style="@style/ButtonBig"
        android:text="@string/monday"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tuesday"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/tuesday"
        style="@style/ButtonBig" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/wednesday"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/wednesday"
        style="@style/ButtonBig" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/thursday"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/thursday"
        style="@style/ButtonBig" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/friday"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/friday"
        style="@style/ButtonBig" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saturday"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/saturday"
        style="@style/ButtonBig" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sunday"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/sunday"
        style="@style/ButtonBig" />
</LinearLayout>

</layout>