<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="java.time.LocalDateTime"/>
        <import type="java.time.format.DateTimeFormatter"/>
        <variable
            name="viewModelBind"
            type="com.vm.timemanager.viewModel.NewTaskAddingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.NewTaskAdding">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar.Title"
                android:layout_width="fill_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleCentered="true" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModelBind.taskFlow.taskName}"
            style="@style/TitleEditText"
            tools:text="This is a new task"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            android:hint="@string/write_a_task_name_here"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModelBind.taskFlow.taskDescription}"
            style="@style/DescriptionEditText"
            tools:text="This is the task description"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_name"
            android:hint="@string/write_a_description_here"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            style="@style/TextDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_description"
            tools:text="Start date: 08.12.22" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_time"
            android:layout_width="match_parent"
            style="@style/ButtonSmall"
            android:text="@string/start_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            style="@style/ButtonSmall"
            android:text="@string/save_the_task"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            style="@style/ButtonSmall"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/bangers"
            android:text="@string/add_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
